wip: create Jwtoken struct model
