# server/docs/swagger.json
@@ -118,12 +118,9 @@
                 ],
                 "responses": {
                     "200": {
-                        "description": "Returns JWT token and success message",
+                        "description": "Returns JWT token(s)",
                         "schema": {
-                            "type": "object",
-                            "additionalProperties": {
-                                "type": "string"
-                            }
+                            "$ref": "#/definitions/models.Jwtoken"
                         }
                     },
                     "400": {
@@ -1264,6 +1261,23 @@
                     "type": "string"
                 },
                 "user_id": {
+                    "type": "string"
+                }
+            }
+        },
+        "models.Jwtoken": {
+            "type": "object",
+            "properties": {
+                "access_token": {
+                    "type": "string"
+                },
+                "expires_in": {
+                    "type": "integer"
+                },
+                "refresh_token": {
+                    "type": "string"
+                },
+                "token_type": {
                     "type": "string"
                 }
             }
